# delegation-program

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  version-align.sh
.github/workflows/: publish-crates-and-sdk.yml  run-tests.yml
idl/: dlp.json
sdk/: Cargo.toml
sdk/delegate/: Cargo.toml
sdk/delegate/src/: lib.rs
sdk/src/: consts.rs  delegate_args.rs  lib.rs  pda.rs
sdk/ts/: package.json
sdk/ts/src/: accounts.ts  constants.ts  index.ts  seeds.ts
sdk/ts/src/instructions/: undelegate.ts
src/: consts.rs  consts_whitelist.rs  discriminant.rs  discriminator.rs  error.rs  instruction.rs  lib.rs  loaders.rs  pda.rs  utils.rs  utils_account.rs  verify_commitment.rs  verify_state.rs
src/args/: call_handler.rs  commit_state.rs  delegate.rs  finalize_with_handler.rs  mod.rs  top_up.rs  top_up_ephemeral_balance.rs  validator_claim_fees.rs  whitelist_validator_for_program.rs
src/instruction/: delegate.rs  top_up.rs  validator_claim_fees.rs  whitelist_validator_for_program.rs
src/instruction_builder/: allow_undelegate.rs  call_handler.rs  close_ephemeral_balance.rs  close_validator_fees_vault.rs  commit_state.rs  commit_state_from_buffer.rs  delegate.rs  delegate_ephemeral_balance.rs  delegate_from_wrapper_program.rs  finalize.rs  finalize_with_handler.rs  init_fees_vault.rs  init_protocol_fees_vault.rs  init_validator_fees_vault.rs  mod.rs  protocol_claim_fees.rs  top_up.rs  top_up_ephemeral_balance.rs  undelegate.rs  undelegate_ephemeral_balance.rs  validator_claim_fees.rs  whitelist_validator_for_program.rs
src/processor/: allow_undelegate.rs  call_handler.rs  close_ephemeral_balance.rs  close_ephemeral_balance_v1.rs  close_validator_fees_vault.rs  commit_state.rs  commit_state_from_buffer.rs  delegate.rs  delegate_ephemeral_balance.rs  external_undelegate.rs  finalize.rs  finalize_with_data.rs  finalize_with_hook.rs  init_fees_vault.rs  init_protocol_fees_vault.rs  init_validator_fees_vault.rs  mod.rs  post_commit_action.rs  protocol_claim_fees.rs  top_up.rs  top_up_and_delegate.rs  top_up_ephemeral_balance.rs  undelegate.rs  undelegate_ephemeral_balance.rs  validator_claim_fees.rs  whitelist.rs  whitelist_validator_for_program.rs  withdraw.rs
src/processor/utils/: is_on_curve.rs  loaders.rs  mod.rs  pda.rs  verify.rs
src/state/: commit_record.rs  commit_state.rs  delegated_account_seeds.rs  delegated_metadata.rs  delegation.rs  delegation_metadata.rs  delegation_record.rs  ephemeral_balance.rs  mod.rs  program_config.rs  whitelist_for_program.rs
src/state/utils/: account.rs  discriminator.rs  mod.rs  to_bytes.rs  try_from_bytes.rs
src/utils/: balance_lamports.rs  loaders.rs  mod.rs  utils_account.rs  utils_pda.rs  verify_commitment.rs  verify_state.rs
tests/: test_allow_undelegate.rs  test_call_handler.rs  test_commit_finalize.rs  test_commit_on_curve.rs  test_commit_on_curve_with_in_between_transfer.rs  test_commit_state.rs  test_commit_state_from_buffer.rs  test_commit_state_with_program_config.rs  test_delegate.rs  test_delegate_on_curve.rs  test_finalize.rs  test_finalize_with_data.rs  test_init_fees_vault.rs  test_init_validator_fees_vault.rs  test_lamports_settlement.rs  test_protocol_claim_fees.rs  test_top_up.rs  test_undelegate.rs  test_undelegate_on_curve.rs  test_undelegate_without_commit.rs  test_validator_claim_fees.rs  test_validator_whitelisting.rs  test_whitelist_validator_for_program.rs  test_withdraw.rs
tests/buffers/: test_delegation.bpf
tests/fixtures/: accounts.rs  mod.rs
tests/integration/: Anchor.toml  package-lock.json  package.json
tests/integration/crates/types/: Cargo.toml
tests/integration/idls/: delegation.json
tests/integration/programs/test-delegation/: Cargo.toml
tests/integration/programs/test-delegation/src/: lib.rs
tests/integration/tests/: test-delegation.ts  test-fees.ts  test-increment-delegated.ts
tests/integration/tests/fixtures/: consts.ts  test-pda.json
