[package]
name = "delegation-program"
version = "0.1.0"
description = "Delegation program for the Ephemeral Rollups"
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/delegation-program"
readme = "./README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[lib]
crate-type = ["cdylib", "lib"]
name = "dlp"

[features]
no-entrypoint = []
default = ["solana-security-txt", "shank"]

[dependencies]
bytemuck = "^1.14.3"
num_enum = "^0.7.2"
solana-program = "^1.16"
thiserror = "^1.0.57"
paste = "^1.0"
solana-security-txt = { version = "1.1.1", optional = true }
shank = { version = "0.4.2", optional = true }



[dev-dependencies]
base64 = "0.22.0"
rand = "0.8.5"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
tokio = { version = "1.37", features = ["full"] }
