[workspace]
members = ["sdk"]

[workspace.package]
version = "0.1.1"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/delegation-program"
readme = "./README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]

delegation-sdk-attribute-delegate = { path = "sdk/delegate", version = "0.1.0" }

## External crates
solana-program = "^1.16"
borsh = "0.10.3"

[package]
name = "delegation-program"
description = "Delegation program for the Ephemeral Rollups"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "dlp"

[features]
no-entrypoint = []
default = ["solana-security-txt"]

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
bytemuck = "^1.14.3"
num_enum = "^0.7.2"
thiserror = "^1.0.57"
paste = "^1.0"
solana-security-txt = { version = "1.1.1", optional = true }

[dev-dependencies]
base64 = "0.22.0"
rand = "0.8.5"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
tokio = { version = "1.37", features = ["full"] }
