[package]
name = "delegation-program"
description = "Delegation program for the Ephemeral Rollups"
version = "0.1.3"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/delegation-program"
readme = "./README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[lib]
crate-type = ["cdylib", "lib"]
name = "dlp"

[features]
no-entrypoint = []
default = ["solana-security-txt"]
unit_test_config = []

[dependencies]
borsh = "0.10.3"
paste = "^1.0"
solana-program = "^1.18.25"
bytemuck = "^1.14.3"
num_enum = "^0.7.2"
thiserror = "^1.0.57"
solana-security-txt = { version = "1.1.1", optional = true }
solana-curve25519 = "2.0.13"

[dev-dependencies]
base64 = "0.22.0"
rand = "0.8.5"
solana-program-test = "^1.18.25"
solana-sdk = "^1.18.25"
tokio = { version = "1.40.0", features = ["full"] }
delegation-program = { path = ".", features = ["unit_test_config"] }