[package]
name = "delegation-program-sdk"
description = "Delegation Program SDK"
version = "0.0.1"
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
