[package]
name = "delegation-sdk-attribute-delegate"
description = "Delegation sdk-attribute-delegate"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.60", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
