[package]
name = "test-delegation"
version = "0.1.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_delegation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.8"
anchor-lang = "0.30.1"
ephemeral-rollups-sdk-v2 = { version = "0.1.2", features = ["anchor"] }
