[package]
name = "test-delegation"
version = "0.1.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_delegation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = { version = ">=1.16" }
# magicblock-delegation-program = { path = "../../../..", features = ["no-entrypoint"] }
ephemeral-rollups-sdk-v2 = { git = "https://github.com/magicblock-labs/ephemeral-rollups-sdk.git", features = ["anchor"] }